Project management working.

--- a/Journal/app/directives/art-folder-picker/art-folder-picker.html
+++ b/Journal/app/directives/art-folder-picker/art-folder-picker.html
@@ -1,7 +1,5 @@
-<div>
-    <a class="btn btn-chromeless btn-select-folder">
-        <i class="zmdi zmdi-folder"></i>
-        <span class="btn-label" ng-show="folder" ng-bind="folderPath"></span>
-        <span class="btn-label" ng-show="!folder" translate>Select folder</span>
-    </a>
-</div>
+<md-button>
+    <md-icon md-font-icon="zmdi zmdi-folder"></md-icon>
+    <span class="btn-label" ng-show="folder" ng-bind="folderPath"></span>
+    <span class="btn-label" ng-show="!folder" translate>Select folder</span>
+</md-button>
