--- a/Journal/app/states/main/main.html
+++ b/Journal/app/states/main/main.html
@@ -1,22 +1,24 @@
 <div class="layout-root" layout="row">
     <md-sidenav id="primary-sidenav" class="md-sidenav-left" md-component-id="left" md-is-locked-open="true">
         <md-list>
-            <md-list-item ui-sref="main.view.recently-used">
+            <md-list-item ui-sref="main.view.recently-used({index: 0})" ui-sref-active="md-list-item-active">
                 <md-icon md-font-icon="zmdi zmdi-time-restore"></md-icon>
                 <div flex translate>Recently Used</div>
             </md-list-item>
         </md-list>
 
         <h4 class="md-padding md-hue-3 text-uppercase" translate>Projects</h4>
-        <md-list flex>
-            <md-list-item ng-repeat="project in t.projects" ui-sref="main.view.project({index: $index + 1, project: project})">
+        <md-list flex ng-cloak>
+            <md-list-item ng-repeat="project in t.projects track by $index"  ui-sref-active="md-list-item-active"
+                ng-model="t.droppedFile" data-drop="true" data-jqyoui-options="{hoverClass: 'drop-target-valid', tolerance: 'pointer'}"
+                jqyoui-droppable="{onDrop: 't.onFileDropped'}" ng-click="t.selectProject(project, $index + 1)" ng-hide="project.IsDeleted">
                 <md-icon md-font-icon=""></md-icon>
                 <div flex>{{project.Title}}</div>
             </md-list-item>
         </md-list>
 
-        <div layout="row" layout-align="center center">
-            <md-button class="md-fab" aria-label="Add Project">
+        <div class="md-padding" layout="row" layout-align="end center">
+            <md-button class="md-fab" aria-label="Add Project" ng-click="t.addProject($event)">
                 <md-icon md-font-icon="zmdi zmdi-plus"></md-icon>
             </md-button>
         </div>
@@ -28,20 +30,3 @@
 
     <!--<md-theme-preview primary="artivityLight" accent="artivityLight"></md-theme-preview>-->
 </div>
-
-<script type="text/ng-template" id="delete-project-dialog.html">
-    <md-dialog aria-label="Project Dialog" ng-cloak>
-        <md-dialog-content>
-            <md-content class="padding-x-xl padding-y-xl">
-                <h3>Delete '{{project.Title}}'?</h3>
-                <p translate>The project will be archived and no content will be deleted. You can restore the project at any time in the
-                    future.
-                </p>
-            </md-content>
-        </md-dialog-content>
-        <md-dialog-actions layout="row" layout-align="end center">
-            <md-button ng-click="ok()" class="md-warn">Delete</md-button>
-            <md-button ng-click="cancel()" translate>Cancel</md-button>
-        </md-dialog-actions>
-    </md-dialog>
-</script>
