--- a/Journal/app/directives/art-file-card/art-file-card.html
+++ b/Journal/app/directives/art-file-card/art-file-card.html
@@ -1,5 +1,4 @@
-<!--<div layout="column" jqyoui-draggable="{onStart: 't.onDragStart', onStop: 't.onDragStop'}" data-drag="true" data-jqyoui-options="{opacity:0.7, helper: 'clone', appendTo: 'body', placeholder: 'keep', cursorAt: {top: 5, left: 5}}">-->
-<div layout="column">
+<div layout="column" ng-model="t.file" jqyoui-draggable="{onStart: 't.onDragStart', onStop: 't.onDragStop'}" data-drag="true" data-jqyoui-options="{opacity:0.7, helper: 'clone', appendTo: 'body', placeholder: 'keep', cursorAt: {top: 5, left: 5}}">
     <md-card class="card" style="position: relative; overflow: hidden">
         <img class="md-card-image link" ng-src="{{t.file.thumbnail}}" alt="{{t.file.label}}" ng-right-click="t.showSheet($event)" ui-sref="document({fileUri: t.file.uri})">
 
