--- a/Journal/index.html
+++ b/Journal/index.html
@@ -64,6 +64,17 @@
 	<script src="bower_components/moment-duration-format/lib/moment-duration-format.js"></script>
 	<script src="bower_components/EaselJS/lib/easeljs-0.8.2.combined.js"></script>
 	<script src="bower_components/yasgui/dist/yasgui.bundled.min.js"></script>
+	<script src="bower_components/get-size/get-size.js"></script>
+	<script src="bower_components/ev-emitter/ev-emitter.js"></script>
+	<script src="bower_components/desandro-matches-selector/matches-selector.js"></script>
+	<script src="bower_components/fizzy-ui-utils/utils.js"></script>
+	<script src="bower_components/outlayer/item.js"></script>
+	<script src="bower_components/outlayer/outlayer.js"></script>
+	<script src="bower_components/masonry/masonry.js"></script>
+	<script src="bower_components/imagesloaded/imagesloaded.js"></script>
+	<script src="bower_components/jquery-bridget/jquery-bridget.js"></script>
+	<!--<script src="bower_components/matches-selector/matches-selector.js"></script>-->
+	<script src="bower_components/angular-masonry/angular-masonry.js"></script>
 	<!-- endbower -->
 	<!-- /REMOVE:JS -->
 
