Improved navigationService with support for UI router.

--- a/Journal/app/directives/art-window-menu/art-window-menu.html
+++ b/Journal/app/directives/art-window-menu/art-window-menu.html
@@ -1,5 +1,5 @@
 <md-menu md-offset="-150 42">
-    <md-button class="md-button-icon" ng-click="$mdOpenMenu($event)">
+    <md-button class="md-button-icon" ng-click="$mdMenu.open($event)">
         <md-icon md-font-icon="zmdi zmdi-account-circle"></md-icon>
         <span>{{userName}}</span>
     </md-button>
