--- a/Journal/app/directives/art-window-toolbar/art-window-toolbar.html
+++ b/Journal/app/directives/art-window-toolbar/art-window-toolbar.html
@@ -1,5 +1,5 @@
 <md-toolbar class="art-window-toolbar" layout="row" layout-align="start center">
-    <md-button class="md-button-icon" ui-sref="main.view.recently-used({index: 0})">
+    <md-button class="md-button-icon" ng-click="navigateBack()" ng-if="canNavigateBack()">
         <md-icon md-font-icon="zmdi zmdi-chevron-left"></md-icon>
     </md-button>
 
