--- a/Journal/app/states/main/main.html
+++ b/Journal/app/states/main/main.html
@@ -1,33 +1,35 @@
-<div class="layout-root" layout="row">
-    <md-sidenav id="primary-sidenav" class="md-sidenav-left" md-component-id="left" md-is-locked-open="true">
-        <h5 class="md-padding text-uppercase" style="margin-bottom: 0" translate>Files</h5>
-        <md-list>
-            <md-list-item ui-sref="main.view.recently-used({index: 0})" ui-sref-active="md-list-item-active">
-                <md-icon md-font-icon="zmdi zmdi-time-restore"></md-icon>
-                <div flex translate>Recently Used</div>
-            </md-list-item>
-        </md-list>
+<art-view>
+    <div class="layout-root" layout="row">
+        <md-sidenav id="primary-sidenav" class="md-sidenav-left" md-component-id="left" md-is-locked-open="true">
+            <h5 class="md-padding text-uppercase" style="margin-bottom: 0" translate>Files</h5>
+            <md-list>
+                <md-list-item ui-sref="main.view.recently-used({index: 0})" ui-sref-active="md-list-item-active">
+                    <md-icon md-font-icon="zmdi zmdi-time-restore"></md-icon>
+                    <div flex translate>Recently Used</div>
+                </md-list-item>
+            </md-list>
 
-        <h5 class="md-padding text-uppercase" style="margin-bottom: 0" translate>Projects</h5>
-        <md-list flex ng-cloak>
-            <md-list-item ng-repeat="project in t.projects track by $index" ui-sref-active="md-list-item-active"
-                ng-model="t.droppedFile" data-drop="true" data-jqyoui-options="{hoverClass: 'drop-target-valid', tolerance: 'pointer'}"
-                jqyoui-droppable="{onDrop: 't.onFileDropped'}" ng-click="t.selectProject(project, $index + 1)" ng-hide="project.IsDeleted">
-                <md-icon md-font-icon="zmdi"></md-icon>
-                <div flex>{{project.Title}}</div>
-            </md-list-item>
-        </md-list>
+            <h5 class="md-padding text-uppercase" style="margin-bottom: 0" translate>Projects</h5>
+            <md-list flex ng-cloak>
+                <md-list-item ng-repeat="project in t.projects track by $index" ui-sref-active="md-list-item-active" ng-model="t.droppedFile"
+                    data-drop="true" data-jqyoui-options="{hoverClass: 'drop-target-valid', tolerance: 'pointer'}" jqyoui-droppable="{onDrop: 't.onFileDropped'}"
+                    ng-click="t.selectProject(project, $index + 1)" ng-hide="project.IsDeleted">
+                    <md-icon md-font-icon="zmdi"></md-icon>
+                    <div flex>{{project.Title}}</div>
+                </md-list-item>
+            </md-list>
 
-        <div class="md-padding" layout="row" layout-align="end center">
-            <md-button class="md-fab" aria-label="Add Project" ng-click="t.addProject($event)">
-                <md-icon md-font-icon="zmdi zmdi-plus"></md-icon>
-            </md-button>
-        </div>
-    </md-sidenav>
+            <div class="md-padding" layout="row" layout-align="end center">
+                <md-button class="md-fab" aria-label="Add Project" ng-click="t.addProject($event)">
+                    <md-icon md-font-icon="zmdi zmdi-plus"></md-icon>
+                </md-button>
+            </div>
+        </md-sidenav>
 
-    <md-content flex>
-        <div ui-view></div>
-    </md-content>
+        <md-content flex>
+            <div ui-view></div>
+        </md-content>
 
-    <!--<md-theme-preview primary="artivityLight" accent="artivityLight"></md-theme-preview>-->
-</div>
+        <!--<md-theme-preview primary="artivityLight" accent="artivityLight"></md-theme-preview>-->
+    </div>
+</art-view>
