--- a/Journal/app/directives/art-settings-accounts/art-settings-accounts.html
+++ b/Journal/app/directives/art-settings-accounts/art-settings-accounts.html
@@ -4,7 +4,7 @@
             Connect your online accounts to benefit from additional features:
         </div>
 
-        <md-button ng-click="addAccount()">
+        <md-button ng-click="addAccount($event)">
             <md-icon md-font-icon="zmdi zmdi-plus zmdi-lg"></md-icon>
             <span translate>Add account</span>
         </md-button>
