--- a/Journal/app/states/document-history/document-history.html
+++ b/Journal/app/states/document-history/document-history.html
@@ -1,9 +1,7 @@
 <art-view title="{{t.file.label}}">
     <div class="layout-root" layout="column">
         <div class="md-toolbar" layout="row" layout-align="start center">
-            <div class="title" flex>
-                <span>{{t.file.label}}</span>
-            </div>
+            <div flex></div>
 
             <md-button class="md-button" ng-click="t.publishLatestRevision(t.file)">
                 <md-icon md-font-icon="zmdi zmdi-share"></md-icon>
