--- a/Journal/app/directives/art-file-card/art-file-card.html
+++ b/Journal/app/directives/art-file-card/art-file-card.html
@@ -1,30 +1,38 @@
-<div class="layout-container art-file-card" layout="column" ng-model="t.file" jqyoui-draggable="{onStart: 't.onDragStart', onStop: 't.onDragStop'}"
+<div class="layout-container" layout="column" ng-model="t.file" jqyoui-draggable="{onStart: 't.onDragStart', onStop: 't.onDragStop'}"
     data-drag="true" data-jqyoui-options="{opacity:0.7, helper: 'clone', appendTo: 'body', placeholder: 'keep', cursorAt: {top: 5, left: 5}}"
     ng-hide="t.file.visible === false" ng-cloak>
-    <img class="link" ng-src="{{t.file.thumbnail}}" alt="{{t.file.label}}" ng-right-click="t.showSheet($event)" ui-sref="document({fileUri: t.file.uri})">
+    <div class="layout-container art-file-card" layout="column" ui-sref="document({fileUri: t.file.uri})">
+        <img class="link" ng-src="{{t.file.thumbnail}}" alt="{{t.file.label}}" ng-right-click="t.showSheet($event)" ui-sref="document({fileUri: t.file.uri})">
 
-    <div class="file-extension">
-        {{t.fileExtension}}
+        <div class="overlay" layout="column">
+            <div flex></div>
+            <div layout="row">
+                <md-button class="md-button" flex>
+                    <md-icon md-font-icon="zmdi zmdi-edit"></md-icon>
+                    Edit
+                </md-button>
+                <md-button class="md-button-icon" ui-sref="document-history({fileUri: t.file.uri})">
+                    <md-icon md-font-icon="zmdi zmdi-time-restore"></md-icon>
+                    Show History
+                </md-button>
+            </div>
+        </div>
     </div>
 
-    <h4 class="md-padding no-margin" md-highlight-text="t.highlightText">{{t.fileName}}</h4>
+    <div layout="row" layout-align="start center">
+        <h4 class="md-padding no-margin" md-highlight-text="t.highlightText" flex>{{t.file.label}}</h4>
+        <md-button class="md-button-icon">
+            <md-icon md-font-icon="zmdi zmdi-star-outline"></md-icon>
+        </md-button>
+    </div>
 
     <div layout="row" layout-align="start center">
-        <md-button class="md-button-icon" flex>
-            <md-icon md-font-icon="zmdi zmdi-edit"></md-icon>
-        </md-button>
         <div flex></div>
         <md-button class="md-icon-button" ng-if="!t.file.synchronizationEnabled" ng-click="t.publishFile()">
             <md-icon md-font-icon="zmdi zmdi-cloud-upload"></md-icon>
         </md-button>
         <md-button class="md-icon-button" ng-if="t.file.synchronizationEnabled">
             <md-icon md-font-icon="zmdi zmdi-cloud-done"></md-icon>
-        </md-button>
-        <md-button class="md-button-icon">
-            <md-icon md-font-icon="zmdi zmdi-star-outline"></md-icon>
-        </md-button>
-        <md-button class="md-button-icon" ui-sref="document-history({fileUri: t.file.uri})">
-            <md-icon md-font-icon="zmdi zmdi-time-restore"></md-icon>
         </md-button>
     </div>
 
